--- a/css/style.css
+++ b/css/style.css
@@ -32,20 +32,6 @@ section .container,
     margin-left: auto;
 }
 
-.abel,
-section h2,
-#skills h3,
-{
-    font-family: 'Abel', sans-serif;
-}
-
-.uppercase,
-section h2,
-#skills h3,
-{
-    text-transform: uppercase;
-}
-
 
 section
 {
@@ -60,13 +46,16 @@ section h2
     font-size: 3.2rem;
 }
 
-.flexible-images {
-  max-width: 100%;
+.top {
+  background-image: url("../images/top2.jpg");
   height: 500px;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
 }
 
 @media (max-width: 768px) {
-  .flexible-images {
+  .top {
     height: 250px;
   }
 }
@@ -93,6 +82,14 @@ section h2
     font-weight: bold;
     margin-bottom: 10px;
     color: #c32acc;
+}
+
+#skills p
+{
+
+    padding: 20px 40px;
+    text-align: center;
+
 }
 
 .box-title {
@@ -160,7 +157,7 @@ footer
     text-align:center;
     padding:8px 0 10px;
     color:#fff;
-    background-color:#000;
+    background-color:#fff;
     border-radius:5px;
 }
 
